# tsoobgx

./: .gitignore  DESCRIPTION  NAMESPACE  configure  configure.ac
R/: bgx.Booster.R  bgx.DMatrix.R  bgx.DMatrix.save.R  bgx.create.features.R  bgx.cv.R  bgx.dump.R  bgx.ggplot.R  bgx.importance.R  bgx.load.R  bgx.model.dt.tree.R  bgx.plot.deepness.R  bgx.plot.importance.R  bgx.plot.multi.trees.R  bgx.plot.shap.R  bgx.plot.tree.R  bgx.save.R  bgx.save.raw.R  bgx.train.R  callbacks.R  tsoobgx.R  utils.R
demo/: 00Index  basic_walkthrough.R  boost_from_prediction.R  caret_wrapper.R  create_sparse_matrix.R  cross_validation.R  custom_objective.R  early_stopping.R  generalized_linear_model.R  gpu_accelerated.R  interaction_constraints.R  poisson_regression.R  predict_first_ntree.R  predict_leaf_indices.R  tweedie_regression.R
inst/doc/: discoverYourData.R  discoverYourData.Rmd  discoverYourData.html  tsoobgx.R  tsoobgx.Rnw  tsoobgxPresentation.R  tsoobgxPresentation.Rmd  tsoobgxPresentation.html  tsoobgxfromJSON.R  tsoobgxfromJSON.html
man/: agaricus.test.Rd  agaricus.train.Rd  bgx.Booster.complete.Rd  bgx.DMatrix.Rd  bgx.DMatrix.save.Rd  bgx.attr.Rd  bgx.create.features.Rd  bgx.cv.Rd  bgx.dump.Rd  bgx.gblinear.history.Rd  bgx.importance.Rd  bgx.load.Rd  bgx.model.dt.tree.Rd  bgx.parameters.Rd  bgx.plot.deepness.Rd  bgx.plot.importance.Rd  bgx.plot.multi.trees.Rd  bgx.plot.shap.Rd  bgx.plot.tree.Rd  bgx.save.Rd  bgx.save.raw.Rd  bgx.train.Rd  callbacks.Rd  cb.cv.predict.Rd  cb.early.stop.Rd  cb.gblinear.history.Rd  cb.save.model.Rd  dim.bgx.DMatrix.Rd  dimnames.bgx.DMatrix.Rd  getinfo.Rd  predict.bgx.Booster.Rd  print.bgx.Booster.Rd  print.bgx.DMatrix.Rd  print.bgx.cv.Rd  setinfo.Rd  slice.bgx.DMatrix.Rd  tsoobgx-deprecated.Rd
src/: Makevars.in  Makevars.win  Makevars.win-e  init.c  tsoobgx_R.cc  tsoobgx_R.h  tsoobgx_assert.c  tsoobgx_custom.cc
src/amalgamation/: tsoobgx-all0.cc
src/include/tsoobgx/: base.h  build_config.h  c_api.h  data.h  feature_map.h  gbm.h  learner.h  linear_updater.h  logging.h  metric.h  objective.h  predictor.h  tree_model.h  tree_updater.h
src/rabit/include/rabit/internal/: utils.h
src/src/: CMakeLists.txt  cli_main.cc  learner.cc  logging.cc
src/src/c_api/: c_api.cc  c_api_error.cc  c_api_error.h
src/src/common/: base64.h  bitmap.h  column_matrix.h  common.cc  common.cu  common.h  compressed_iterator.h  config.h  device_helpers.cuh  enum_class_param.h  group_data.h  hist_util.cc  hist_util.cu  hist_util.h  host_device_vector.cc  host_device_vector.cu  host_device_vector.h  io.h  math.h  quantile.h  random.h  row_set.h  span.h  timer.h  transform.h
src/src/data/: data.cc  simple_csr_source.cc  simple_csr_source.h  simple_dmatrix.cc  simple_dmatrix.h  sparse_page_dmatrix.cc  sparse_page_dmatrix.h  sparse_page_raw_format.cc  sparse_page_source.cc  sparse_page_source.h  sparse_page_writer.cc  sparse_page_writer.h
src/src/gbm/: gblinear.cc  gblinear_model.h  gbm.cc  gbtree.cc  gbtree_model.h
src/src/linear/: coordinate_common.h  linear_updater.cc  param.h  updater_coordinate.cc  updater_gpu_coordinate.cu  updater_shotgun.cc
src/src/metric/: elementwise_metric.cc  elementwise_metric.cu  metric.cc  metric_common.h  multiclass_metric.cc  multiclass_metric.cu  rank_metric.cc
src/src/objective/: hinge.cc  hinge.cu  multiclass_obj.cc  multiclass_obj.cu  objective.cc  rank_obj.cc  regression_loss.h  regression_obj.cc  regression_obj.cu
src/src/predictor/: cpu_predictor.cc  gpu_predictor.cu  predictor.cc
src/src/tree/: param.h  split_evaluator.cc  split_evaluator.h  tree_model.cc  tree_updater.cc  updater_basemaker-inl.h  updater_colmaker.cc  updater_gpu.cu  updater_gpu_common.cuh  updater_gpu_hist.cu  updater_histmaker.cc  updater_prune.cc  updater_quantile_hist.cc  updater_quantile_hist.h  updater_refresh.cc  updater_skmaker.cc  updater_sync.cc
tests/: testthat.R
tests/testthat/: test_basic.R  test_callbacks.R  test_custom_objective.R  test_dmatrix.R  test_gc_safety.R  test_glm.R  test_helpers.R  test_interaction_constraints.R  test_interactions.R  test_monotone.R  test_parameter_exposure.R  test_poisson_regression.R  test_update.R
vignettes/: tsoobgxfromJSON.Rmd
